# first_ggez_game

./: Cargo.toml  LICENSE  README.md  imgui.ini
data/: enemy_state.csv  image_data.csv
src/: actor.rs  assets.rs  draw.rs  game_state.rs  imgui_wrapper.rs  input.rs  lib.rs  vector2.rs  view.rs
src/actor_mods/: actor.rs  actor_state.rs
src/scene_mods/: main_scene.rs  mod.rs  scene_manager.rs
