[package]
name = "my_first_ggez"
version = "0.1.0"
authors = ["username <username@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.12.3"
csv = "1.1.5"
gfx_core = "0.9.2"
gfx_device_gl = "0.16.2"
ggez = "0.5.1"
glam = "0.12.0"
imgui = "0.6.1"
imgui-gfx-renderer = "0.6.1"
nalgebra = "0.24.1"
oorandom = "11.1.3"
serde = "1.0.123"
toml = "0.5.8"

[lib]
name = "my_first_ggez"
path = "src/lib.rs"

[[bin]]
name = "my_first_ggez"
path = "src/bin/main.rs"
